<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Quizlet Questions</string>

    <!-- Device setup/conditions text -->

    <string name="bluetooth_denied">You wont turn on Bluetooth. How do you expect this game to work?</string>
    <string name="bluetooth_approved">Bluetooth enabled</string>
    <string name="permission_denied">You wont grant the permissions we need. How do you expect this game to work?</string>
    <string name="permission_approved">Thank you</string>
    <string name="discoverability_denied">Allowing Discoverability is required to be a Host</string>
    <string name="no_host_name">Looks like you are not hosting yet. Try giving it another go.</string>

    <string name="not_connected_yet_try_again">The Bluetooth connection was not set up yet. Please try again.</string>

    <!-- Start Text -->
    <string name="check_bluetooth">… checking Bluetooth …</string>
    <string name="no_bluetooth_error">Sadly your device does not support Bluetooth. This is not the game for you.</string>
    <string name="bluetooth_off">This game requires Bluetooth. Please enable it now.</string>
    <string name="bluetooth_on">Bluetooth is on</string>


    <string name="check_permissions">… checking permissions …</string>
    <string name="missing_permissions">more Application permissions required</string>
    <string name="has_permissions">has needed permissions</string>

    <string name="auth_with_quizlet">Use a Quizlet account to host or play</string>
    <string name="use_quizlet_host">Host as <xliff:g id="username" example="username">%1$s</xliff:g></string>
    <string name="use_quizlet_play">Play as <xliff:g id="username" example="username">%1$s</xliff:g></string>
    <string name="or">or</string>
    <string name="play_anonymously">Play Anonymously</string>

    <!-- Join Game -->
    <string name="username">Username:</string>
    <string name="join_explanation">Listed below are the devices available via Bluetooth. Check with your friend hosting the game for what their phone\'s name and address is.</string>
    <string name="join_warning">Make sure your friend\'s phone is showing the Lobby screen BEFORE you try to join their game!</string>
    <string name="bonded_title">Phones you\'ve paired with before</string>
    <string name="unbonded_title">Phones you haven\'t paired with yet</string>

    <!-- Host Game -->
    <string name="auth_with_quizlet_dialog">Authenticate with Quizlet</string>
    <string name="host_welcome">Welcome, <xliff:g id="username" example="username">%1$s</xliff:g>! Feel free to change your username for the game. Once you pick a set, the game lobby will start and other players will be able to join.</string>
    <string name="term_count"><xliff:g id="count" example="10">%1$d</xliff:g> terms</string>
    <string name="never_synced">unsynced</string>

    <!-- Lobby text -->

    <string name="host_designation">Host</string>
    <string name="you_designation">You</string>
    <string name="username_hint">Enter username</string>
    <string name="set_field_hint">Enter a Quizlet set ID</string>

    <string name="host_button">Start Hosting</string>
    <string name="host_button_discoverable">…Hosting…</string>
    <string name="host_discoverable_toast">Host mode starting (enabled for %1$d seconds)</string>

    <string name="game_type_title">Game Modes</string>
    <string name="game_type_infinity">Infinity</string>
    <string name="game_type_player_points">Player points</string>
    <string name="game_type_all_points">All points</string>
    <string name="game_type_minutes">Minutes</string>

    <string name="join_button">Join Game</string>
    <string name="start_oath">Start OAuth</string>
    <string name="join_button_looking">…Looking…</string>

    <!-- End game text -->
    <string name="game_winner_string">%s has won the game!</string>

</resources>
