<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/has_bluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_bluetooth"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/has_permissions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_permissions"
        android:textAlignment="center"
        android:visibility="invisible"
        tools:visibility="visible" />


    <LinearLayout
        android:id="@+id/game_start_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:visibility="visible">

        <Button
            android:id="@+id/start_with_quizlet_btn"
            style="@style/AustinButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_with_quizlet"
            android:textAlignment="center" />

        <Button
            android:id="@+id/start_anonymous_btn"
            style="@style/AustinButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_anonymously"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>