<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/welcome_host_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/host_welcome"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:text="@string/username" />

        <EditText
            android:id="@+id/username_text_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/username_hint"
            android:minHeight="@dimen/min_tap_target_size"
            android:minWidth="@dimen/min_tap_target_size" />
    </LinearLayout>

    <ImageView
        android:id="@+id/refresh_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_sync" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/set_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- dynamic content here -->
        </android.support.v7.widget.RecyclerView>
    </ScrollView>

</LinearLayout>