<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sixarmstudios.quizletcolors.StartActivity">

    <LinearLayout
        android:id="@+id/debug_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent">


        <CheckedTextView
            android:id="@+id/start_hosting"
            style="@style/LobbyButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/host_button" />

        <EditText
            android:id="@+id/username_text_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:minHeight="@dimen/min_tap_target_size"
            android:minWidth="@dimen/min_tap_target_size" />

        <CheckedTextView
            android:id="@+id/join_game"
            style="@style/LobbyButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_button" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/debug_layout" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/debug_layout"
        app:layout_constraintBottom_toTopOf="@id/fragment_container"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/join_option_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="@drawable/spacer_6dp_height"
            android:orientation="vertical"
            android:showDividers="middle">

            <TextView
                style="@style/GameOption"
                tools:text="Sharks!" />

            <TextView
                style="@style/GameOption"
                tools:text="Dogs!" />
        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>
